[package]
name = "pathfinder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colog = "1.4.0"
env_logger = "0.11.10"
futures = "0.3.32"
log = "0.4.31"
rayon = "1.12.0"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.5.8"
